Avoid img stretching on resize

--- a/stilio/frontend/static/css/styles.css
+++ b/stilio/frontend/static/css/styles.css
@@ -32,6 +32,7 @@
 .small-logo-search {
     height: 56px;
     width: 56px;
+    min-width: 56px;
 }
 
 .search-nav {
